--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.6.2",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "reacts": "^0.0.0"
